--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <img src="images/bag.jpg" />
   <img src="images/banana.jpg" />
   <div>
-    <button>Vote for Picture 1</button>
-    <button>Vote for Picture 2</button>
-    <button>Vote for Picture 3</button>
+    <button id="product-button-1">Vote for Picture 1</button>
+    <button id="product-button-2">Vote for Picture 2</button>
+    <button id="product-button-3">Vote for Picture 3</button>
   </div>
   <script src="app.js"></script>
 </body>
