All three buttons produce random images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <H1>Bus Mall!</H1>
-  <img src="images/bag.jpg" />
-  <img src="images/banana.jpg" />
+  <img id="mall-img-1" src="images/bag.jpg" />
+  <img id="mall-img-2" src="images/banana.jpg" />
+  <img id="mall-img-3" src="images/bathroom.jpg" />
   <div>
     <button id="product-button-1">Vote for Picture 1</button>
     <button id="product-button-2">Vote for Picture 2</button>
