--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
+  <ul id="total">
+
+  </ul>
+  <div class="H1">
   <H1>Bus Mall!</H1>
-  <img id="mall-img-1" src="images/bag.jpg" />
-  <img id="mall-img-2" src="images/banana.jpg" />
-  <img id="mall-img-3" src="images/bathroom.jpg" />
+  </div>
+  <div class="img1">
+    <img id="mall-img-1" src="" alt="" />
+  
+    <img id="mall-img-2" src="" alt="" />
+
+  <img id="mall-img-3" src="" alt="" />
+  </div>
   <div>
     <button id="product-button-1">Vote for Picture 1</button>
     <button id="product-button-2">Vote for Picture 2</button>
     <button id="product-button-3">Vote for Picture 3</button>
   </div>
+  <ul id="total"></ul>
   <script src="app.js"></script>
 </body>
 </html>
