No repeating images in same vote time

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <H1>Bus Mall!</H1>
   </div>
   <div class="img1">
-    <img id="mall-img-1" src="" alt="" />
+    <img id="busmallone" src="" alt="" />
   
-    <img id="mall-img-2" src="" alt="" />
+    <img id="busmalltwo" src="" alt="" />
 
-  <img id="mall-img-3" src="" alt="" />
+  <img id="busmallthree" src="" alt="" />
   </div>
   <div>
     <button id="product-button-1">Vote for Picture 1</button>
