--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="H1">
   <H1>Bus Mall!</H1>
   </div>
-  <div class="img1">
+  <div class="img1" id="">
     <img id="busmallone" src="" alt="" />
   
     <img id="busmalltwo" src="" alt="" />
@@ -27,6 +27,9 @@
     <button id="product-button-3">Vote for Picture 3</button>
   </div>
   <ul id="total"></ul>
+  <canvas id="myChart" width="400" height="400"></canvas>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
   <script src="app.js"></script>
 </body>
+
 </html>
