--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <title>Document</title>
 </head>
 <body>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   <ul id="total">
 
   </ul>
   <div class="H1">
   <H1>Bus Mall!</H1>
+  <p>Welcome to Bus Mall!</p>
+  <p>Please take an exclusive look and browse through our lastest creations and vote on which products you believe should be in the market next season.</p>
   </div>
   <div class="img1" id="">
     <img id="busmallone" src="" alt="" />
